fix overflow

--- a/app/assets/stylesheets/surety.less
+++ b/app/assets/stylesheets/surety.less
@@ -346,3 +346,7 @@ form.alert {
   width: 6000px;
   overflow-x: scroll;
 }
+
+.accordion-inner {
+  overflow-x: auto;
+}
